# discord-with-cc

./: .env.example  .gitignore  CLAUDE.md  Modelfile  README.md  package-lock.json  package.json  pyproject.toml  requirements.txt  tsconfig.json  vitest.config.ts
.claude/: settings.json  settings.local.json
.github/workflows/: test.yml
docs/: deploy-railway.md
docs/plans/: 2026-03-03-ollama-model-options-design.md  2026-03-06-python-qwen-agent-migration-design.md  2026-03-07-whimsy-mode-design.md
src/: agent.ts  bot.py  bot.ts  calendar-mode.ts  calendar-parser.ts  calendar-service.ts  calendar-store.ts  channel-mode.ts  channel-store.ts  claude.ts  codex.ts  config.py  config.ts  gemini.ts  history.ts  index.ts  main.py  ollama-tools.ts  ollama.ts  permissions.ts  process.ts  prompts.ts  schedule-parser.ts  schedule-runner.ts  schedule-store.ts  tone.ts
src/__tests__/: bot.test.ts  calendar-mode.test.ts  calendar-parser.test.ts  calendar-service.test.ts  calendar-store.test.ts  channel-mode.test.ts  channel-store.test.ts  claude-settings.test.ts  claude.test.ts  codex.test.ts  gemini.test.ts  history.test.ts  index.test.ts  ollama-tools.test.ts  ollama.test.ts  schedule-parser.test.ts  schedule-runner.test.ts  schedule-store.test.ts  slash-register.test.ts  tone.test.ts
src/agents/: base.py  claude.py  codex.py  gemini.py  qwen.py
src/commands/: calendar.py  calendar.ts  channel.py  channel.ts  clear.py  clear.ts  emoji.py  reaction.py  router.py  router.ts  tone.py  (+4 more)
tests/: test_bot.py  test_config.py  test_context_detection.py  test_whimsy_integration.py
(+53 files in other folders)
